Adiciona script para inicializar aplicacao

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx tsc",
     "dev": "tsx watch ./src/server.ts",
-    "test": "jest"
+    "test": "jest",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
